First steps with Redux

--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "node-sass": "4.5.3",
     "open-browser-webpack-plugin": "0.0.5",
     "react-addons-test-utils": "15.6.2",
+    "react-redux": "^5.0.6",
     "react-test-renderer": "16.0.0",
+    "redux": "^3.7.2",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
