--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cross-env": "5.1.0",
     "eslint-plugin-jsx-a11y": "^5.1.0",
     "react": "16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-hot-loader": "3.1.1",
     "react-router-dom": "4.2.0"
