--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@types/react": "^16.0.27",
     "cross-env": "5.1.0",
     "eslint-plugin-jsx-a11y": "^5.1.0",
+    "moment": "^2.20.1",
     "react": "16.0.0",
     "react-bootstrap": "^0.31.5",
+    "react-datepicker": "^0.64.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "3.1.1",
     "react-router-dom": "4.2.0"
@@ -68,6 +70,7 @@
     "html-webpack-plugin": "2.30.0",
     "husky": "0.15.0-beta.2",
     "jest": "21.2.0",
+    "jquery": "^3.2.1",
     "node-sass": "4.5.3",
     "open-browser-webpack-plugin": "0.0.5",
     "react-addons-test-utils": "15.6.2",
