--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "eslint-config-airbnb": "15.1.0",
     "eslint-loader": "1.8.0",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "7.2.0",
     "extract-text-webpack-plugin": "3.0.1",
     "file-loader": "1.1.4",
